workloads/ingress/prod/patch-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
spec:
  rules:
    - host: api.growbin.app
