workloads/ingress/prod/patch-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:123456789012:certificate/PROD_GRAFANA_CERT
  external-dns.alpha.kubernetes.io/managed-by: external-dns
spec:
  rules:
    - host: grafana.growbin.app
